--- a/example/dice_iso.config
+++ b/example/dice_iso.config
@@ -6,10 +6,6 @@ Galaxy         ./galaxy1.params
 
 # Number of OpenMP threads
 Nthreads                8
-# Compute vertical hydrostatic equilibrium for gas components
-GasHydrostaticEq        1
-# Number of iterations to reach hyfrostatic equilibrium
-GasHydrostaticEqIter    4
 # Compute the mean inter-particle distance
 # Useful to define the softening length in SPH codes
 MeanPartDist            0
@@ -24,6 +20,8 @@ SetKeplerian		0
 # Name of the final IC file
 # The file extension wil be added by DICE
 Filename                dice_iso
+# File format of the IC file [Gadget1,Gadget2]
+ICformat		Gadget2
 # Cosmological parameters for Virial quantities
 # Default values are taken from Planck cosmology
 # Hubble constant
