--- a/example/dice_merger.config
+++ b/example/dice_merger.config
@@ -7,10 +7,6 @@ Galaxy         ./galaxy2.params
 
 # Number of OpenMP threads
 Nthreads                8
-# Compute vertical hydrostatic equilibrium for gas components
-GasHydrostaticEq        0
-# Number of iterations to reach hyfrostatic equilibrium
-GasHydrostaticEqIter    4
 # Compute the mean inter-particle distance
 # Useful to define the softening length in SPH codes
 MeanPartDist            0
@@ -25,6 +21,8 @@ SetKeplerian		1
 # Name of the final IC file
 # The file extension wil be added by DICE
 Filename                dice_merger
+# File format of the IC file [Gadget1,Gadget2]
+ICformat		Gadget2
 # Cosmological parameters for Virial quantities
 # Default values are taken from Planck cosmology
 # Hubble constant
