--- a/example/dice_iso.config
+++ b/example/dice_iso.config
@@ -2,7 +2,7 @@
 # Putting identical galaxies one beside the other allows DICE
 # to re-use the previous computation,
 # and thus reduces the global execution time
-Galaxy         ./galaxy1.params
+Galaxy         params_files/galaxy1.params
 
 # Number of OpenMP threads
 Nthreads                8
@@ -14,7 +14,7 @@ AcceptImaginary         0
 # Maximum number of component for a galaxy model
 MaxCompNumber           20
 # Output the circular velocity in an additional file
-OutputRc                0
+OutputRc                1
 # Define a Keplerian trajectory (only when 2 galaxies are defined)
 SetKeplerian		0
 # Name of the final IC file
