--- a/example/dice_iso_streams.config
+++ b/example/dice_iso_streams.config
@@ -2,8 +2,8 @@
 # Putting identical galaxies one beside the other allows DICE
 # to re-use the previous computation,
 # and thus reduces the global execution time
-Galaxy         ./galaxy1.params
-Stream         ./streams.params
+Galaxy         params_files/galaxy1.params
+Stream         params_files/streams.params
 
 # Number of OpenMP threads
 Nthreads                8
