--- a/example/dice_halo.config
+++ b/example/dice_halo.config
@@ -2,8 +2,7 @@
 # Putting identical galaxies one beside the other allows DICE
 # to re-use the previous computation,
 # and thus reduces the global execution time
-Galaxy         params_files/galaxy1.params
-Galaxy         params_files/galaxy2.params
+Galaxy         params_files/halo.params
 
 # Number of OpenMP threads
 Nthreads                8
@@ -17,10 +16,10 @@ MaxCompNumber           20
 # Output the circular velocity in an additional file
 OutputRc                0
 # Define a Keplerian trajectory (only when 2 galaxies are defined)
-SetKeplerian		1
+SetKeplerian		0
 # Name of the final IC file
 # The file extension wil be added by DICE
-Filename                dice_merger
+Filename                dice_halo
 # File format of the IC file [Gadget1,Gadget2]
 ICformat		Gadget2
 # Cosmological parameters for Virial quantities
@@ -33,24 +32,3 @@ OmegaL			0.70
 OmegaM			0.30
 # Spatial curvature density paramter
 OmegaK			0.00
-
-# Keplerian trajectory parameters
-# -------------------------------
-# This keywords should be set if you want a Keplerian orbit between two galaxies.
-# If there are more or less galaxies, trajectories will be set according
-# to the xc,yc,zc,vel_xc,vel_yc,vel_zc keywords in the galaxy parameters files.
-# xc,yc,zc,vel_xc,vel_yc,vel_zc are recomputed according to the Keplerian paramters if SetKeplerian=1
-# By default, galaxies are aligned along the X-axis
-
-# Eccentricity of the Keplerian orbits
-Eccentricity    1.00
-# Initial distance between the galaxies [kpc]
-Rinit           100.
-# Pericentral distance of the Keplerian system [kpc]
-Rperi           1.
-# Polar angle of the normal vector of the orbital plane
-OrbitPlanePhi   45.
-# Azimuthal angle pf the normal vector of the orbital plane
-OrbitPlaneTheta 45.
-
-
