DICE update - hydrostatic equilibrium improvement

--- a/example/dice_iso.config
+++ b/example/dice_iso.config
@@ -15,6 +15,12 @@ AcceptImaginary         0
 MaxCompNumber           20
 # Output the circular velocity in an additional file
 OutputRc                1
+# Output the circular velocity of the gas disk in an additional file
+OutputGasRc             1
+# Output the density profile of a given component number
+OutputRho               0
+# Output the gravitational potential profile
+OutputPot               0
 # Define a Keplerian trajectory (only when 2 galaxies are defined)
 SetKeplerian		0
 # Name of the final IC file
