--- a/example/dice_iso.config
+++ b/example/dice_iso.config
@@ -21,6 +21,10 @@ OutputGasRc             1
 OutputRho               0
 # Output the gravitational potential profile
 OutputPot               0
+# Output the velocity dispersions of a given component
+OutputSigma             2
+# Output the Toomre criterion of a given component
+OutputToomre            2
 # Define a Keplerian trajectory (only when 2 galaxies are defined)
 SetKeplerian		0
 # Name of the final IC file
@@ -38,3 +42,8 @@ OmegaL			0.70
 OmegaM			0.30
 # Spatial curvature density paramter
 OmegaK			0.00
+# Normalize the sum of mass fractions to one
+NormMassFact            1
+# Size of the GSL integration space
+GslWorkspaceSize        1000000
+
