--- a/example/dice_iso_streams.config
+++ b/example/dice_iso_streams.config
@@ -33,3 +33,8 @@ OmegaL			0.70
 OmegaM			0.30
 # Spatial curvature density paramter
 OmegaK			0.00
+# Normalize the sum of mass fractions to one
+NormMassFact            1
+# Size of the GSL integration space
+GslWorkspaceSize        1000000
+
