--- a/example/dice_merger.config
+++ b/example/dice_merger.config
@@ -33,6 +33,10 @@ OmegaL			0.70
 OmegaM			0.30
 # Spatial curvature density paramter
 OmegaK			0.00
+# Normalize the sum of mass fractions to one
+NormMassFact            1
+# Size of the GSL integration space
+GslWorkspaceSize        1000000
 
 # Keplerian trajectory parameters
 # -------------------------------
