--- a/example/dice_iso.config
+++ b/example/dice_iso.config
@@ -2,7 +2,8 @@
 # Putting identical galaxies one beside the other allows DICE
 # to re-use the previous computation,
 # and thus reduces the global execution time
-Galaxy         params_files/galaxy1.params
+#					    x[kpc]  y[kpc]  z[kpc]  vx[km/s]  vy[km/s]  vz[km/s]  spin[deg]  incl[deg]
+Galaxy         params_files/galaxy1.params  0.      0.      0.      0.        0.        0.        45.        45.
 
 # Number of OpenMP threads
 Nthreads                8
@@ -12,7 +13,7 @@ MeanPartDist            0
 # Allow imaginary solution for the velocity dispersion computation
 AcceptImaginary         0
 # Maximum number of component for a galaxy model
-MaxCompNumber           20
+MaxCompNumber           64
 # Output the circular velocity in an additional file
 OutputRc                1
 # Output the circular velocity of the gas disk in an additional file
@@ -25,8 +26,6 @@ OutputPot               0
 OutputSigma             2
 # Output the Toomre criterion of a given component
 OutputToomre            2
-# Define a Keplerian trajectory (only when 2 galaxies are defined)
-SetKeplerian		0
 # Name of the final IC file
 # The file extension wil be added by DICE
 Filename                dice_iso
