--- a/example/dice_iso_gas_halo.config
+++ b/example/dice_iso_gas_halo.config
@@ -2,7 +2,8 @@
 # Putting identical galaxies one beside the other allows DICE
 # to re-use the previous computation,
 # and thus reduces the global execution time
-Galaxy         params_files/galaxy_gas_halo.params
+#					            x[kpc]  y[kpc]  z[kpc]  vx[km/s]  vy[km/s]  vz[km/s]  spin[deg]  incl[deg]
+Galaxy         params_files/galaxy_gas_halo.params  0.      0.      0.      0.        0.        0.        0.         0.
 
 # Number of OpenMP threads
 Nthreads                8
@@ -12,12 +13,10 @@ MeanPartDist            0
 # Allow imaginary solution for the velocity dispersion computation
 AcceptImaginary         0
 # Maximum number of component for a galaxy model
-MaxCompNumber           20
+MaxCompNumber           64
 # Output the circular velocity in an additional file
 OutputRc                1
 OutputPot               1
-# Define a Keplerian trajectory (only when 2 galaxies are defined)
-SetKeplerian		0
 # Name of the final IC file
 # The file extension wil be added by DICE
 Filename                dice_iso_gas_halo
