--- a/example/dice_iso_streams.config
+++ b/example/dice_iso_streams.config
@@ -2,8 +2,11 @@
 # Putting identical galaxies one beside the other allows DICE
 # to re-use the previous computation,
 # and thus reduces the global execution time
-Galaxy         params_files/galaxy1.params
-Stream         params_files/streams.params
+#					    x[kpc]  y[kpc]  z[kpc]  vx[km/s]  vy[km/s]  vz[km/s]  spin[deg]  incl[deg]
+Galaxy         params_files/galaxy1.params  0.      0.      0.      0.        0.        0.        0.         0.
+#					    x[kpc]  y[kpc]  z[kpc]  spin[deg]  incl[deg]
+Stream         params_files/streams.params  0.      0.      1.      0.         0.
+Stream         params_files/streams.params  0.      0.      1.      0.         180.
 
 # Number of OpenMP threads
 Nthreads                8
@@ -13,11 +16,9 @@ MeanPartDist            0
 # Allow imaginary solution for the velocity dispersion computation
 AcceptImaginary         0
 # Maximum number of component for a galaxy model
-MaxCompNumber           20
+MaxCompNumber           64
 # Output the circular velocity in an additional file
 OutputRc                0
-# Define a Keplerian trajectory (only when 2 galaxies are defined)
-SetKeplerian		0
 # Name of the final IC file
 # The file extension wil be added by DICE
 Filename                dice_iso_streams
