--- a/example/dice_satellites.config
+++ b/example/dice_satellites.config
@@ -3,12 +3,18 @@
 # to re-use the previous computation,
 # and thus reduces the global execution time
 #					    x[kpc]  y[kpc]  z[kpc]  vx[km/s]  vy[km/s]  vz[km/s]  spin[deg]  incl[deg]
-Galaxy         params_files/galaxy1.params  0.      0.      0.      0.        0.        0.        45.        45.
-Galaxy         params_files/galaxy2.params  0.      0.      0.      0.        0.        0.        45.        135.
+Galaxy         params_files/galaxy1.params  0.      0.      0.      0.        0.        0.        0.         0.
+Galaxy         params_files/galaxy2.params  0.      0.      0.      0.        0.        0.        45.        45.
+Galaxy         params_files/galaxy2.params  0.      0.      0.      0.        0.        0.        0.         90.
+Galaxy         params_files/galaxy2.params  0.      0.      0.      0.        0.        0.        110.       75.
+Galaxy         params_files/galaxy2.params  0.      0.      0.      0.        0.        0.        -45.       -45.
 
 # Keplerian parameters
-#	a    b   c   d   e   f g h
-Kepler	100. 2.0 1.0 45. 45. 1 2 0
+#	a    b   c     d   e  f g h
+Kepler	100. 10.0 1.0  0.  0. 1 2 1
+Kepler	120. 10.0 1.0 90.  0. 1 3 1
+Kepler	140. 10.0 1.0 45. 45. 1 4 1
+Kepler	160. 10.0 1.0 75. 75. 1 5 1
 # a -> Initial distance between the galaxies [kpc]
 # b -> Pericentral distance of the Keplerian system [kpc]
 # c -> Eccentricity of the Keplerian orbit
@@ -31,7 +37,7 @@ MaxCompNumber           64
 OutputRc                0
 # Name of the final IC file
 # The file extension wil be added by DICE
-Filename                dice_merger
+Filename                dice_satellites
 # File format of the IC file [Gadget1,Gadget2]
 ICformat		Gadget2
 # Cosmological parameters for Virial quantities
