--- a/example/dice_spiral.config
+++ b/example/dice_spiral.config
@@ -2,21 +2,8 @@
 # Putting identical galaxies one beside the other allows DICE
 # to re-use the previous computation,
 # and thus reduces the global execution time
-#					                 x[kpc]  y[kpc]  z[kpc]  vx[km/s]  vy[km/s]  vz[km/s]  spin[deg]  incl[deg]
-Galaxy  params_files/galaxy1.params  0.      0.      0.      0.        0.        0.        45.        45.
-Galaxy  params_files/galaxy2.params  0.      0.      0.      0.        0.        0.        45.        135.
-
-# Keplerian parameters
-#	a    b   c   d   e   f g h
-Kepler	100. 2.0 1.0 45. 45. 1 2 0
-# a -> Initial distance between the galaxies [kpc]
-# b -> Pericentral distance of the Keplerian system [kpc]
-# c -> Eccentricity of the Keplerian orbit
-# d -> Polar angle of the normal vector of the orbital plane [deg]
-# e -> Azimuthal angle pf the normal vector of the orbital plane [deg]
-# f -> Galaxy 1 index
-# g -> Galaxy 2 index
-# h -> Reference center index (0=none)
+#					                x[kpc]  y[kpc]  z[kpc]  vx[km/s]  vy[km/s]  vz[km/s]  spin[deg]  incl[deg]
+Galaxy  params_files/spiral.params  0.      0.      0.      0.        0.        0.        45.        45.
 
 # Number of OpenMP threads
 Nthreads                8
@@ -28,26 +15,34 @@ AcceptImaginary         0
 # Maximum number of component for a galaxy model
 MaxCompNumber           64
 # Output the circular velocity in an additional file
-OutputRc                0
+OutputRc                1
+# Output the circular velocity of the gas disk in an additional file
+OutputGasRc             1
+# Output the density profile of a given component number
+OutputRho               0
+# Output the gravitational potential profile
+OutputPot               0
+# Output the velocity dispersions of a given component
+OutputSigma             2
+# Output the Toomre criterion of a given component
+OutputToomre            2
 # Name of the final IC file
 # The file extension wil be added by DICE
-Filename                dice_merger
+Filename                dice_spiral
 # File format of the IC file [Gadget1,Gadget2]
-ICformat		Gadget2
+ICformat		        Gadget2
 # Cosmological parameters for Virial quantities
 # Default values are taken from Planck cosmology
 # Hubble constant
-H0			71.0			
+H0			            71.0			
 # Dark energy density parameter
-OmegaL			0.70
+OmegaL			        0.70
 # Matter density parameter
-OmegaM			0.30
+OmegaM			        0.30
 # Spatial curvature density paramter
-OmegaK			0.00
+OmegaK			        0.00
 # Normalize the sum of mass fractions to one
 NormMassFact            1
 # Size of the GSL integration space
 GslWorkspaceSize        1000000
-
-
 
