--- a/example/dice_iso_gas_halo.config
+++ b/example/dice_iso_gas_halo.config
@@ -32,3 +32,5 @@ OmegaL			0.70
 OmegaM			0.30
 # Spatial curvature density paramter
 OmegaK			0.00
+# Integration scheme: 1=GSL QAG (slow) / 2=GSL QAGIU (very slow) / 3= GSL QNG (fast)
+GslIntegrationScheme	3
