--- a/example/dice_merger.config
+++ b/example/dice_merger.config
@@ -47,7 +47,9 @@ OmegaK			0.00
 # Normalize the sum of mass fractions to one
 NormMassFact            1
 # Size of the GSL integration space
-GslWorkspaceSize        1000000
+GslWorkspaceSize        10000
+# Integration scheme: 1=GSL QAG (slow) / 2=GSL QAGIU (very slow) / 3= GSL QNG (fast)
+GslIntegrationScheme	3
 
 
 
