--- a/example/dice_iso_streams.config
+++ b/example/dice_iso_streams.config
@@ -16,7 +16,7 @@ MeanPartDist            0
 # Maximum number of component for a galaxy model
 MaxCompNumber           64
 # Output the circular velocity in an additional file
-OutputRc                0
+OutputRz                0
 # Name of the final IC file
 # The file extension wil be added by DICE
 Filename                dice_iso_streams
