--- a/example/dice_merger.config
+++ b/example/dice_merger.config
@@ -25,8 +25,8 @@ Nthreads                8
 MeanPartDist            0
 # Maximum number of component for a galaxy model
 MaxCompNumber           64
-# Output the circular velocity in an additional file
-OutputRc                0
+# Output quantities in the rz plane
+OutputRz                1
 # Name of the final IC file
 # The file extension wil be added by DICE
 Filename                dice_merger
