--- a/example/dice_iso.config
+++ b/example/dice_iso.config
@@ -6,24 +6,14 @@
 Galaxy         params_files/galaxy1.params  0.      0.      0.      0.        0.        0.        45.        45.
 
 # Number of OpenMP threads
-Nthreads                8
+Nthreads                16
 # Compute the mean inter-particle distance
 # Useful to define the softening length in SPH codes
 MeanPartDist            0
 # Maximum number of component for a galaxy model
 MaxCompNumber           64
-# Output the circular velocity in an additional file
-OutputRc                1
-# Output the circular velocity of the gas disk in an additional file
-OutputGasRc             1
-# Output the density profile of a given component number
-OutputRho               0
-# Output the gravitational potential profile
-OutputPot               0
-# Output the velocity dispersions of a given component
-OutputSigma             2
-# Output the Toomre criterion of a given component
-OutputToomre            2
+# Output quantities in the rz plane
+OutputRz                1
 # Name of the final IC file
 # The file extension wil be added by DICE
 Filename                dice_iso
