--- a/example/dice_iso_gas_halo.config
+++ b/example/dice_iso_gas_halo.config
@@ -12,9 +12,8 @@ Nthreads                8
 MeanPartDist            0
 # Maximum number of component for a galaxy model
 MaxCompNumber           64
-# Output the circular velocity in an additional file
-OutputRc                1
-OutputPot               1
+# Output quantities in the rz plane
+OutputRz                1
 # Name of the final IC file
 # The file extension wil be added by DICE
 Filename                dice_iso_gas_halo
