--- a/example/dice_satellites.config
+++ b/example/dice_satellites.config
@@ -31,8 +31,8 @@ Nthreads                8
 MeanPartDist            0
 # Maximum number of component for a galaxy model
 MaxCompNumber           64
-# Output the circular velocity in an additional file
-OutputRc                0
+# Output quantities in the rz plane
+OutputRz                0
 # Name of the final IC file
 # The file extension wil be added by DICE
 Filename                dice_satellites
