--- a/example/dice_spiral.config
+++ b/example/dice_spiral.config
@@ -12,18 +12,8 @@ Nthreads                8
 MeanPartDist            0
 # Maximum number of component for a galaxy model
 MaxCompNumber           64
-# Output the circular velocity in an additional file
-OutputRc                1
-# Output the circular velocity of the gas disk in an additional file
-OutputGasRc             1
-# Output the density profile of a given component number
-OutputRho               0
-# Output the gravitational potential profile
-OutputPot               0
-# Output the velocity dispersions of a given component
-OutputSigma             2
-# Output the Toomre criterion of a given component
-OutputToomre            2
+# Output quantities in the rz plane
+OutputRz                1
 # Name of the final IC file
 # The file extension wil be added by DICE
 Filename                dice_spiral
