Some fixes / examples update

--- a/example/dice_halo.config
+++ b/example/dice_halo.config
@@ -20,6 +20,8 @@ Filename                dice_halo
 ICformat		Gadget2
 # Cosmological parameters for Virial quantities
 # Default values are taken from Planck cosmology
+# Redshift
+Redshift 		0.0
 # Hubble constant
 H0			71.0			
 # Dark energy density parameter
