--- a/example/dice_counter_rot.config
+++ b/example/dice_counter_rot.config
@@ -2,11 +2,11 @@
 # Putting identical galaxies one beside the other allows DICE
 # to re-use the previous computation,
 # and thus reduces the global execution time
-#			            x[kpc]  y[kpc]  z[kpc]  vx[km/s]  vy[km/s]  vz[km/s]  spin[deg]  incl[deg]
-Galaxy  params_files/spiral.params  0.      0.      0.      0.        0.        0.        45.        45.
+#					                 x[kpc]  y[kpc]  z[kpc]  vx[km/s]  vy[km/s]  vz[km/s]  spin[deg]  incl[deg]
+Galaxy                  params_files/counter_rot.params  0.      0.      0.      0.        0.        0.        0.        0.
 
 # Number of OpenMP threads
-Nthreads                8
+Nthreads                16
 # Compute the mean inter-particle distance
 # Useful to define the softening length in SPH codes
 MeanPartDist            0
@@ -16,13 +16,11 @@ MaxCompNumber           64
 OutputRz                1
 # Name of the final IC file
 # The file extension wil be added by DICE
-Filename                dice_spiral
+Filename                dice_iso
 # File format of the IC file [Gadget1,Gadget2]
 ICformat		Gadget2
 # Cosmological parameters for Virial quantities
 # Default values are taken from Planck cosmology
-# Redshift
-Redshift 		0.0
 # Hubble constant
 H0			71.0			
 # Dark energy density parameter
@@ -32,9 +30,8 @@ OmegaM			0.30
 # Spatial curvature density paramter
 OmegaK			0.00
 # Normalize the sum of mass fractions to one
-NormMassFact            1
+NormMassFact            0
 # Size of the GSL integration space
 GslWorkspaceSize        10000
 # Integration scheme: 1=GSL QAG (slow) / 2=GSL QAGIU (very slow) / 3= GSL QNG (fast)
 GslIntegrationScheme	3
-
