--- a/example/dice_iso.config
+++ b/example/dice_iso.config
@@ -21,6 +21,8 @@ Filename                dice_iso
 ICformat		Gadget2
 # Cosmological parameters for Virial quantities
 # Default values are taken from Planck cosmology
+# Redshift
+Redshift 		0.0
 # Hubble constant
 H0			71.0			
 # Dark energy density parameter
