--- a/example/dice_iso_streams.config
+++ b/example/dice_iso_streams.config
@@ -24,6 +24,8 @@ Filename                dice_iso_streams
 ICformat		Gadget2
 # Cosmological parameters for Virial quantities
 # Default values are taken from Planck cosmology
+# Redshift
+Redshift 		0.0
 # Hubble constant
 H0			71.0			
 # Dark energy density parameter
