--- a/example/dice_satellites.config
+++ b/example/dice_satellites.config
@@ -40,6 +40,8 @@ Filename                dice_satellites
 ICformat		Gadget2
 # Cosmological parameters for Virial quantities
 # Default values are taken from Planck cosmology
+# Redshift
+Redshift 		0.0
 # Hubble constant
 H0			71.0			
 # Dark energy density parameter
