--- a/example/dice_iso_streams.config
+++ b/example/dice_iso_streams.config
@@ -3,7 +3,7 @@
 # to re-use the previous computation,
 # and thus reduces the global execution time
 #					    x[kpc]  y[kpc]  z[kpc]  vx[km/s]  vy[km/s]  vz[km/s]  spin[deg]  incl[deg]
-Galaxy         params_files/galaxy1.params  0.      0.      0.      0.        0.        0.        0.         0.
+#Galaxy         params_files/galaxy1.params  0.      0.      0.      0.        0.        0.        0.         0.
 #					    x[kpc]  y[kpc]  z[kpc]  spin[deg]  incl[deg]
 Stream         params_files/streams.params  0.      0.      1.      0.         0.
 Stream         params_files/streams.params  0.      0.      1.      0.         180.
